--- a/app/assets/stylesheets/debts/_show.scss
+++ b/app/assets/stylesheets/debts/_show.scss
@@ -8,3 +8,19 @@ justify-content: center;
 padding-bottom: 2.5%;
 margin-bottom: 2.5%;
 }
+
+.info-card {
+  height: 180px;
+  width: auto;
+  background-color: #FFFFFF;
+}
+
+.info-card-title {
+  height: 30px;
+  width: auto;
+}
+
+.info-card-content {
+  height: 20px;
+  width: auto;
+}
