--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,6 +3,7 @@
     <div class="col-12 col-sm-4">
       <div class="main_logo">
         <%= image_tag 'endebt_logo.svg'%>
+        <p>test</p>
       </div>
     </div>
   </div>
