minor UI updates

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,12 @@
 <div class="container">
   <div class="row justify-content-center">
-    <div class="col-12 col-sm-4">
+    <div class="col-12 col-lg-4">
       <div class="main_logo">
         <%= image_tag 'endebt_logo.svg'%>
-        <p>test</p>
       </div>
     </div>
   </div>
-</div>
+
 
 <br>
 
@@ -22,4 +21,7 @@
   <div class="footer-copyright">
     <i class="fa-regular fa-registered"></i> All Rights Reserved
   </div>
+</div>
+
+
 </div>
