--- a/app/assets/stylesheets/debts/_show.scss
+++ b/app/assets/stylesheets/debts/_show.scss
@@ -10,7 +10,7 @@ margin-bottom: 2.5%;
 }
 
 .info-card {
-  height: 180px;
+  height: 120px;
   width: auto;
   background-color: #FFFFFF;
 }
@@ -23,4 +23,17 @@ margin-bottom: 2.5%;
 .info-card-content {
   height: 20px;
   width: auto;
+}
+
+
+.minimum-card {
+  background-color: #A0F0F9;
+}
+
+.standard-card {
+  background-color: #0DCAF0;
+}
+
+.super-card {
+  background-color: #057E97;
 }
