--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -13,11 +13,11 @@
               </div>
               <div class="swiper-slide">
                 <%# pie chart-- %>
-                <%= pie_chart @progress_data, colors: ["#78C1F3","#FFC93C"], donut: true %>
+                <%= pie_chart @progress_data, colors: ["#78C1F3","#FFC93C"], title: "Progress of Payment", donut: true %>
               </div>
               <div class="swiper-slide">
                 <%# column chart for total-- %>
-                <%= column_chart @data_total, colors: ["#78C1F3","#FFC93C"], stacked:true%>
+                <%= column_chart @data_total, colors: ["#78C1F3","#FFC93C"], title: "Expected Amount for Principal and Interest", stacked:true%>
               </div>
             </div>
           </div>
@@ -26,6 +26,8 @@
     </div>
   </div>
 </div>
+
+
 
 <%# <div data-controller="swiper">
     <div class="swiper-container" data-swiper-target="container">
@@ -58,22 +60,93 @@
 <%# try to add bar chart %>
 <%# <%= bar_chart Payment.group(:next_payment_amount).next_payment_amount %>
 
-<div class="container">
-  <h2>Debt Information</h2>
+<div class="container mb-5">
+  <h2>Debt Profile</h2>
+      <h5>Point you need to understand</h5>
+      <p>The less you pay for monthly payment, the longer takes and end up paying relatively big.
+      You borrowed <%= @debt.original_principal %> $, then you will end up paying <%= @payment_options[3].total_monthly_payment %> $ with this plan. It means you are paying <%= @payment_options[3].total_monthly_payment - @debt.original_principal %> $ as extra. </p>
     <div class="row">
       <div class="col-6">
         <div class="info-card shadow-sm p-3 mb-1 rounded">
-            <p>Remaining balance of principal</p>
-            <%= @debt.remaining_principal %>
+          <p>Original Principal</p>
+          <%= @debt.original_principal %>
         </div>
       </div>
       <div class="col-6">
         <div class="info-card shadow-sm p-3 mb-1 rounded">
-          <p>Total expected amount of payment at this pace</p>
-          <%= @payment_options[3].total_monthly_payment %>
+          <p>Remaining Balance</p>
+          <%= @debt.remaining_principal %>
         </div>
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-6">
+        <div class="info-card shadow-sm p-3 mb-1 rounded">
+          <p>Expected Total Amount</p>
+          <%= @payment_options[3].total_monthly_payment %>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="info-card shadow-sm p-3 mb-1 rounded">
+          <p>Expected Interest Amount</p>
+          <%= @payment_options[3].total_interest_amount %>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-6">
+        <div class="info-card shadow-sm p-3 mb-1 rounded">
+          <p>Monthly Principal</p>
+          <%= @payment_options[3].monthly_payment_principal %>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="info-card shadow-sm p-3 mb-1 rounded">
+          <p>Expected Finish Date</p>
+          <%= @payment_options[3].final_payment_date %>
+        </div>
+      </div>
+    </div>
+</div>
+
+<div class="container">
+  <div class="description">
+    <h2>Choose Your Plan</h2>
+    <p>There are 3 plans to payoff your debt earlier, cheaper and maintain your level of life at the same time</p>
+    <p>Choose one, follow the schedule and get your happy life back👏</p>
+  </div>
+
+  <div class="container mb-4">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="container">
+          <div class="row">
+            <div data-controller="carousel" class="swiper-container" data-carousel-options-value='{"navigation":"ture"}'>
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                   <%= column_chart @data_compare, colors: ["#78C1F3","#FFC93C"], title: "Comparison of Plans", stacked:true %>
+                </div>
+                <div class="swiper-slide">
+                  <%# column chart for plan1-- %>
+                  <%= column_chart @data_plan_1, colors: ["#78C1F3","#FFC93C"], title: "Expected Amount for Principal and Interest for Minimun Plan", stacked:true %>
+                </div>
+                <div class="swiper-slide">
+                  <%# column chart for plan2-- %>
+                  <%= column_chart @data_plan_2, colors: ["#78C1F3","#FFC93C"], title: "Expected Amount for Principal and Interest for Standard Plan", stacked:true%>
+                </div>
+                <div class="swiper-slide">
+                  <%# column chart for plan3-- %>
+                  <%= column_chart @data_plan_3, colors: ["#78C1F3","#FFC93C"], title: "Expected Amount for Principal and Interest for Super Plan", stacked:true%>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 
@@ -93,29 +166,183 @@
     <%= @payment_options[3].total_monthly_payment %>
   <%# </div> %>
 
-    <div class="info shadow-sm p-3 mb-1 bg-body rounded">
+    <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded">
     <h4>Monthly payment amount for principal</h4>
     <%= @payment_options[3].monthly_payment_principal %>
-  </div>
+  <%# </div> %>
 
-  <div class="info shadow-sm p-3 mb-1 bg-body rounded">
+  <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded">
     <h4>How much you pay for interest</h4>
     <%= @payment_options[3].total_interest_amount %>
-  </div>
+  <%# </div> %>
 
-  <div class="info shadow-sm p-3 mb-1 bg-body rounded">
-    <h4>Expected date you finish payment</h4>
-    <%= @payment_options[3].final_payment_date %>
-  </div>
+  <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded"> %>
+    <%# <h4>Expected date you finish payment</h4> %>
+    <%# <%= @payment_options[3].final_payment_date %>
+  <%# </div> %>
 
+<%# </div> %>
+
+<div data-controller='toggle'>
+<div class="container option-cards p-3 mb-1">
+  <div class="row">
+    <div class="col-12 col-md-4">
+      <div class="option-card shadow-sm rounded p-3 mb-1" data-action='click->toggle#show_mini'>
+        <h4>Minimum Plan</h4>
+        <p>You pay less for monthly payment, but takes longer.
+        End up paying relatively big</p>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="option-card shadow-sm rounded p-3 mb-1">
+        <h4>Standard Plan</h4>
+        <p>You pay moderate for monthly payment and takes mederate to payoff. End up paying relatively normal</p>
+      </div>
+    </div>
+    <div class="col-12 col-md-4">
+      <div class="option-card shadow-sm rounded p-3 mb-1">
+        <h4>King Plan</h4>
+        <p>You pay big for monthly payment, but takes shorter.
+        End up paying relatively small.</p>
+      </div>
+    </div>
+  </div>
 </div>
+
+  <div class="container plan-detail minimum-card shadow-sm p-3 mb-1 rounded" data-toggle-target='mini'>
+    <h5>Minimum Plan</h5>
+    <h6>Point of this plan</h6>
+    <p>You pay less for monthly payment, but takes longer.
+      End up paying relatively big.
+      You borrowed <%= @debt.original_principal %> $, then you will end up paying <%= @payment_options[0].total_monthly_payment %> $ with this plan. It means you are paying <%= @payment_options[0].total_monthly_payment - @debt.original_principal %> $ as extra </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Total Amount</p>
+              <%= @payment_options[0].total_monthly_payment %>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Interest Amount</p>
+              <%= @payment_options[0].total_interest_amount %>
+            </div>
+          </div>
+        </div>
+         <div class="row">
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Monthly Principal</p>
+              <%= @payment_options[0].monthly_payment_principal %>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Finish Date</p>
+              <%= @payment_options[0].final_payment_date %>
+            </div>
+          </div>
+        </div>
+        <%= link_to "Select", payment_options_choose_path(@payment_options[0]), method: :put, class: "btn btn-primary mt-3" %>
+      </div>
+  </div>
+
+    <div class="container plan-detail standard-card shadow-sm p-3 mb-1 rounded">
+    <h5>Standard Plan</h5>
+    <h6>Point of this plan</h6>
+    <p>You pay moderate for monthly payment and takes mederate to payoff. End up paying relatively normal.
+      You borrowed <%= @debt.original_principal %> $, then you will end up paying <%= @payment_options[1].total_monthly_payment %> $ with this plan. It means you are paying <%= @payment_options[1].total_monthly_payment - @debt.original_principal %> $ as extra </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Total Amount</p>
+              <%= @payment_options[1].total_monthly_payment %>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Interest Amount</p>
+              <%= @payment_options[1].total_interest_amount %>
+            </div>
+          </div>
+        </div>
+         <div class="row">
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Monthly Principal</p>
+              <%= @payment_options[1].monthly_payment_principal %>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Finish Date</p>
+              <%= @payment_options[1].final_payment_date %>
+            </div>
+          </div>
+        </div>
+        <%= link_to "Select", payment_options_choose_path(@payment_options[1]), method: :put, class: "btn btn-primary mt-3" %>
+      </div>
+  </div>
+
+    <div class="container plan-detail super-card shadow-sm p-3 mb-1 rounded">
+    <h5>Super Plan</h5>
+    <h6>Point of this plan</h6>
+    <p>You pay big for monthly payment, but takes shorter.
+        End up paying relatively small.
+      You borrowed <%= @debt.original_principal %> $, then you will end up paying <%= @payment_options[2].total_monthly_payment %> $ with this plan. It means you are paying <%= @payment_options[2].total_monthly_payment - @debt.original_principal %> $ as extra </p>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Total Amount</p>
+              <%= @payment_options[2].total_monthly_payment %>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Interest Amount</p>
+              <%= @payment_options[2].total_interest_amount %>
+            </div>
+          </div>
+        </div>
+         <div class="row">
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Monthly Principal</p>
+              <%= @payment_options[2].monthly_payment_principal %>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="info-card shadow-sm p-3 mb-1 rounded">
+              <p>Expected Finish Date</p>
+              <%= @payment_options[2].final_payment_date %>
+            </div>
+          </div>
+        </div>
+        <%= link_to "Select", payment_options_choose_path(@payment_options[2]), method: :put, class: "btn btn-primary mt-3" %>
+      </div>
+  </div>
+</div>
+
+
+
+<%# <div data-controller="reveal" data-reveal-hidden-class="d-none">
+  <button data-action="click->reveal#toggle" type="button" class="btn">Toggle me!</button>
+
+  <p data-reveal-target="item" class="d-none mt-4">Hey 👋</p>
+  <p data-reveal-target="item" class="d-none mt-4">You can have multiple items</p>
+</div> %>
+
+
 
 <div class="container mb-4">
   <%# chat gpt thing here %>
  <%# <%= @response["choices"][0]["message"]["content"] %>
 </div>
 
-
+<%#
 <div class="container plan shadow p-3 mb-5 bg-body rounded mb-4">
 <h2>Choose your plan!</h2>
 <div class="accordion" id="accordionExample">
@@ -139,32 +366,32 @@
         <div class="info shadow-sm p-3 mb-1 bg-body rounded">
           <h4>Monthly payment amount for principal</h4>
           <%= @payment_options[0].monthly_payment_principal %>
-        </div>
-        <div class="info shadow-sm p-3 mb-1 bg-body rounded">
+        <%# </div> %>
+        <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded">
           <h4>Total expected amount of payment</h4>
           <%= @payment_options[0].total_monthly_payment %>
-        </div>
+        <%# </div>
         <div class="info shadow-sm p-3 mb-1 bg-body rounded">
           <h4>How much you pay for interest</h4>
           <%= @payment_options[0].total_interest_amount %>
-        </div>
-        <div class="info shadow-sm p-3 mb-1 bg-body rounded">
-          <h4>Expected date you finish payment</h4>
-          <%= @payment_options[0].final_payment_date %>
-        </div>
-        <%= link_to "Select", payment_options_choose_path(@payment_options[0]), method: :put, class: "btn btn-primary mt-3" %>
-      </div>
-    </div>
-  </div>
+        <%# </div> %>
+        <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded"> %>
+          <%# <h4>Expected date you finish payment</h4> %>
+          <%# <%= @payment_options[0].final_payment_date %>
+        <%# </div> %>
+        <%# <%= link_to "Select", payment_options_choose_path(@payment_options[0]), method: :put, class: "btn btn-primary mt-3" %>
+      <%# </div> %>
+    <%# </div> %>
+  <%# </div> %>
 
-  <div class="accordion-item">
+  <%# <div class="accordion-item">
     <h2 class="accordion-header" id="headingTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
         Plan 2
       </button>
     </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample"> %>
+      <%# <div class="accordion-body">
         <div class="info shadow-sm p-3 mb-1 bg-body rounded">
           <h4>Merit</h4>
           <p>You can pay moderate for month, so you can use your money for other things.</p>
@@ -176,24 +403,24 @@
         <div class="info shadow-sm p-3 mb-1 bg-body rounded">
           <h4>Monthly payment amount for principal</h4>
           <%= @payment_options[1].monthly_payment_principal %>
-        </div>
-        <div class="info shadow-sm p-3 mb-1 bg-body rounded">
-          <h4>Total expected amount of payment</h4>
+        <%# </div> %>
+        <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded">
+          <%# <h4>Total expected amount of payment</h4>
           <%= @payment_options[1].total_monthly_payment %>
-        </div>
-        <div class="info shadow-sm p-3 mb-1 bg-body rounded">
-          <h4>How much you pay for interest</h4>
-          <%= @payment_options[1].total_interest_amount %>
-        </div>
-        <div class="info shadow-sm p-3 mb-1 bg-body rounded">
-          <h4>Expected date you finish payment</h4>
-          <%= @payment_options[1].final_payment_date %>
-        </div>
-        <%= link_to "Select", payment_options_choose_path(@payment_options[1]), method: :put, class: "btn btn-primary mt-3" %>
-      </div>
-    </div>
-  </div>
-
+        <%# </div> %>
+        <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded"> %>
+          <%# <h4>How much you pay for interest</h4> %>
+          <%# <%= @payment_options[1].total_interest_amount %>
+        <%# </div> %>
+        <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded"> %>
+          <%# <h4>Expected date you finish payment</h4> %>
+          <%# <%= @payment_options[1].final_payment_date %>
+        <%# </div> %>
+        <%# <%= link_to "Select", payment_options_choose_path(@payment_options[1]), method: :put, class: "btn btn-primary mt-3" %>
+      <%# </div> %>
+    <%# </div>  %>
+  <%# </div> %>
+<%#
   <div class="accordion-item">
     <h2 class="accordion-header" id="headingThree">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -213,22 +440,22 @@
         <div class="info shadow-sm p-3 mb-1 bg-body rounded">
           <h4>Monthly payment amount for principal</h4>
           <%= @payment_options[2].monthly_payment_principal %>
-        </div>
+        <%# </div>
         <div class="info shadow-sm p-3 mb-1 bg-body rounded">
             <h4>Total expected amount of payment</h4>
             <%= @payment_options[2].total_monthly_payment %>
-        </div>
-        <div class="info shadow-sm p-3 mb-1 bg-body rounded">
-            <h4>How much you pay for interest</h4>
-            <%= @payment_options[2].total_interest_amount %>
-        </div>
+        <%# </div> %>
+        <%# <div class="info shadow-sm p-3 mb-1 bg-body rounded"> %>
+            <%# <h4>How much you pay for interest</h4> %>
+            <%# <%= @payment_options[2].total_interest_amount %>
+        <%# </div>
         <div class="info shadow-sm p-3 mb-1 bg-body rounded">
           <h4>Expected date you finish payment</h4>
           <%= @payment_options[2].final_payment_date %>
-        </div>
+        <%# </div>
         <%= link_to "Select", payment_options_choose_path(@payment_options[2]), method: :put, class: "btn btn-primary mt-3" %>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
+      <%# </div> %>
+    <%# </div> %>
+  <%# </div> %>
+<%# </div> %>
+<%# </div> %>
