--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<%# added a container class to wrap up the complete page.  %>
 <div class="container">
   <div class="row justify-content-center">
     <div class="col-12 col-lg-4">
