fix arrow func for carousel

--- a/app/views/debts/show.html.erb
+++ b/app/views/debts/show.html.erb
@@ -19,8 +19,8 @@
                 <%= column_chart @data_total, colors: ["#78C1F3","#FFC93C"], title: "Expected Amount for Principal and Interest", stacked:true%>
               </div>
             </div>
-            <div class="swiper-button-next" data-target="swiper.nextButton"></div>
-            <div class="swiper-button-prev" data-target="swiper.prevButton"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
           </div>
         </div>
       </div>
