--- a/app/views/debts/_form.html.erb
+++ b/app/views/debts/_form.html.erb
@@ -31,28 +31,27 @@
      <%= f.input :monthly_principal_amount, label: "Monthly Principal Amount" %>
    </div>
 
- <div class="mb-3">
+  <div class="mb-3">
      <%= f.input :remaining_principal, label: "Remaining Principal" %>
    </div>
 
    <div class="mb-3">
-    <% <%= f.input :original_principal, label: "Original Principal" %>
+    <%= f.input :original_principal, label: "Original Principal" %>
    </div>
 
    <div class="mb-3">
-    <% <%= f.input :income, label: "Monthly Income"%>
+    <%= f.input :income, label: "Monthly Income"%>
    </div>
 
    <div class="mb-3">
-    <% <%= f.input :expense, label: "Monthly Expense" %>
-  <% </div> %>
+    <%= f.input :expense, label: "Monthly Expense" %>
+  </div>
 
-  <% <div class="mb-3"> %>
-    <% <%= f.input :debt_due_date, label: "Debt Due Date"%>
+  <div class="mb-3">
+    <%= f.input :debt_due_date, label: "Debt Due Date"%>
+  </div>
 
-  <% </div> %>
-
-  <% <%= f.submit "Create Debt Profile", class: 'btn btn-primary' %>
+  <%= f.submit "Create Debt Profile", class: 'btn btn-primary' %>
 
 <% end %>
 </div>
